<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Merlo</string>
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="incorrect_username_password">Incorrect Username or Password</string>
    <string name="username_taken">Sorry that username has been taken</string>
    <string name="email_taken">An account already exists with that username</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back</string>

</resources>
